Fix acompanhamento and condomio overflow-x on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1564,6 +1564,11 @@ textarea.form-control {
   }
 }
 
+.acompanhamento__galeria {
+  max-width: 100vw;
+  overflow-x: hidden;
+}
+
 .acompanhamento__galeria-imagens {
   display: none;
   animation: 1s fadeInUp;
@@ -1583,28 +1588,6 @@ textarea.form-control {
 @media screen and (max-width: 768px) {
   .acompanhamento__galeria-imagem {
     height: 200px;
-  }
-}
-
-.acompanhamento__galeria-imagem:after {
-  content: '';
-  position: absolute;
-  top: -15px;
-  right: -15px;
-  width: 30px;
-  height: 30px;
-  background-image: url("../images/ico/plus-pink.png");
-  background-size: contain;
-  background-position: center center;
-  z-index: 2;
-}
-
-@media screen and (max-width: 768px) {
-  .acompanhamento__galeria-imagem:after {
-    height: 20px;
-    width: 20px;
-    right: -10px;
-    top: -10px;
   }
 }
 
@@ -1782,6 +1765,7 @@ textarea.form-control {
 
 @media screen and (max-width: 768px) {
   .condominio__main-header-caption:after {
+    width: 100%;
     transform: none !important;
   }
 }
@@ -1867,6 +1851,11 @@ textarea.form-control {
   .condominio__header .inner-title:after {
     width: 140px;
   }
+}
+
+.condominio__galeria {
+  max-width: 100vw;
+  overflow-x: hidden;
 }
 
 .condominio__galeria-imagens {
