--- a/scss/sections/__acompanhamento.scss
+++ b/scss/sections/__acompanhamento.scss
@@ -133,7 +133,9 @@
     }
 
     &__galeria {
-
+        max-width: 100vw;
+        overflow-x: hidden;
+        
         &-imagens {
             display: none;
             animation: 1s fadeInUp;
@@ -151,26 +153,6 @@
 
             @media screen and (max-width: $bp-MD) {
                 height: 200px;
-            }
-
-            &:after {
-                content: '';
-                position: absolute;
-                top: -15px;
-                right: -15px;
-                width: 30px;
-                height: 30px;
-                background-image: url('../images/ico/plus-pink.png');
-                background-size: contain;
-                background-position: center center;
-                z-index: 2;
-
-                @media screen and (max-width: $bp-MD) {
-                    height: 20px;
-                    width: 20px;
-                    right: -10px;
-                    top: -10px;
-                }
             }
 
             &:before {
