--- a/scss/sections/__condominio.scss
+++ b/scss/sections/__condominio.scss
@@ -45,6 +45,7 @@
                 transform: skew(-28deg) translateX(-140px);
 
                 @media screen and (max-width: $bp-MD) {
+                    width: 100%;
                     transform: none !important;
                 }
             }
@@ -124,6 +125,9 @@
     }
 
     &__galeria {
+        max-width: 100vw;
+        overflow-x: hidden;
+
         &-imagens {
             padding: 0 40px;
 
